2018-01-18  Daniel Hawkins
    * lib/artifacts: Fix boots/gauntlets that should posess a damage value that don't. Fixes bug #832.

2018-01-14  Daniel Hawkins
    * server/skills.c: Fix segfault from check for transport when monster uses
      jumping skill.

2018-01-13  Daniel Hawkins
    * lib/artifacts: Make goblin leaders generate facing forward and animate the
      artifact monsters so the versions that have animations use the animation frames.

2018-01-08  Daniel Hawkins
    * common/artifact.c: Expand identified face use of pre-identified items, even
      if the type otherwise need identifying. This makes gems appear with the correct face.

2018-01-07  Daniel Hawkins
    * common/artifact.c: Make artifacts of items that do not need identifying
      appear using their identified face and animation. In particular, this makes
      the randomly-generated tougher monsters (e.g. goblin leaders) differtiable
      from the normal monsters in the room.

2018-01-02  Daniel Hawkins
    * server/shop.c: Make shop pricing treat unidentified items as if they were
      the normal version of the item. Fixes Bug #812.

2017-09-02  Daniel Hawkins
    * random_maps/main.c: Expand test generator options to allow
      layout choice.

2017-08-26  Daniel Hawkins
    * types/spellbook/spellbook.c: Identify spellbooks of spells you already know
      when applying them. Also make the message name the spell.

2017-08-23  Daniel Hawkins
    * server/attack.c: Add message and set a new flag for indicating a player is paralyzed.
    * server/player.c: Add message for end of paralysis and disallow blindly eating
      while paralyzed.
    * server/monster.c: Make sure monsters unset paralyze flag when they can move again.
    * include/define.h: Creation of FLAG_PARALYZED flag.
    * common/loader.l: Allow for the paralyzed flag to exist in objects saved to file.

2017-08-15  Daniel Hawkins
    * server/skills.c: Disallow jumping while in a transport.

2017-08-13  Daniel Hawkins