@@ -1,3 +1,7 @@
+2018-01-21  Daniel Hawkins
+    * common/init.c: Use strspn for finding the first non-whitespace character in attackmess,
+      and allow for tabs to be used as whitespace.
+
 2018-01-18  Daniel Hawkins
     * lib/artifacts: Fix boots/gauntlets that should posess a damage value that don't. Fixes bug #832.
 
@@ -16,7 +20,7 @@
 2018-01-07  Daniel Hawkins
     * common/artifact.c: Make artifacts of items that do not need identifying
       appear using their identified face and animation. In particular, this makes
-      the randomly-generated tougher monsters (e.g. goblin leaders) differtiable
+      the randomly-generated tougher monsters (e.g. goblin leaders) differentiable
       from the normal monsters in the room.
 
 2018-01-02  Daniel Hawkins
